Fixed Order Now button.

--- a/misas-thai-street-cuisine-2.0/Pages/Home.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Home.razor
@@ -55,7 +55,7 @@
 
     private async Task ScrollToMenuInfo()
     {
-        await JS.InvokeVoidAsync("document.getElementById('menu-info').scrollIntoView", true);
+        await JS.InvokeVoidAsync("scrollToMenuInfo");
     }
 }
 
