Added sticky header and cart icon

--- a/misas-thai-street-cuisine-2.0/Components/MenuInfo.razor
+++ b/misas-thai-street-cuisine-2.0/Components/MenuInfo.razor
@@ -7,7 +7,7 @@
 <div class="menu-info-section">
     <div class="menu-header-row">
         <div class="date-selector">
-            <div class="date-label">Select a Date</div>
+            <div class="date-label">Select Delivery Date</div>
             <div class="date-list">
                 @foreach (var date in UpcomingWednesdays)
                 {
