--- a/misas-thai-street-cuisine-2.0/Layout/MainLayout.razor.css
+++ b/misas-thai-street-cuisine-2.0/Layout/MainLayout.razor.css
@@ -157,7 +157,13 @@
     height: auto;
 }
 
-
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0.5rem 0;    
+}
 .footer-left {
     padding-left: 20px;
 }
@@ -170,6 +176,7 @@
     padding-right: 20px;
     display: flex;
     gap: 20px;
+    justify-content: flex-end;
 }
 .footer-right a {
     color: #ee6900;
