--- a/misas-thai-street-cuisine-2.0/Components/MenuModal.razor
+++ b/misas-thai-street-cuisine-2.0/Components/MenuModal.razor
@@ -38,7 +38,7 @@
                             {
                                 <div class="cart-upgrade-row slide-in">
                                     <div class="cart-upgrade-option">
-                                        <span class="cart-upgrade-label"><b>Upgrade:</b> Swap sticky rice for 24 oz Phad Thai – <b>add $9</b></span>
+                                        <span class="cart-upgrade-label"><b>Upgrade:</b> Swap rice for 24 oz Phad Thai – <b>add $9</b></span>
                                         <button class="cart-btn" @onclick="() => ChangePhadThai24(-1)">−</button>
                                         <span class="cart-qty">@PhadThai24Qty</span>
                                         <button class="cart-btn" @onclick="() => ChangePhadThai24(1)">+</button>
@@ -49,7 +49,7 @@
                             {
                                 <div class="cart-upgrade-row slide-in">
                                     <div class="cart-upgrade-option">
-                                        <span class="cart-upgrade-label"><b>Upgrade:</b> Swap sticky rice for 48 oz Phad Thai – <b>add $18</b></span>
+                                        <span class="cart-upgrade-label"><b>Upgrade:</b> Swap rice for 48 oz Phad Thai – <b>add $18</b></span>
                                         <button class="cart-btn" @onclick="() => ChangePhadThai48(-1)">−</button>
                                         <span class="cart-qty">@PhadThai48Qty</span>
                                         <button class="cart-btn" @onclick="() => ChangePhadThai48(1)">+</button>
